Fix z-index issues in components that use the Tooltip component

--- a/packages/frontend/src/features/ChatsPanel/components/ChatPanel/components/MessageBox/index.module.css
+++ b/packages/frontend/src/features/ChatsPanel/components/ChatPanel/components/MessageBox/index.module.css
@@ -9,8 +9,6 @@
 }
 
 .message-text-box {
-    position: relative;
-
     grid-area: 1 / 1 / -1 / 2;
 
     color: var(--color-text-primary);
