--- a/packages/frontend/src/features/FriendsPanel/index.module.css
+++ b/packages/frontend/src/features/FriendsPanel/index.module.css
@@ -79,6 +79,10 @@
 
     padding: 0rem;
     margin: 0rem;
+
+    /* Tooltip */
+    position: relative;
+    z-index: 1000;
 }
 
 .friends-list,
