--- a/packages/frontend/src/features/OptionsSidebar/index.module.css
+++ b/packages/frontend/src/features/OptionsSidebar/index.module.css
@@ -1,14 +1,14 @@
 .wrapper {
     container-type: inline-size;
 
-    /* Needed to make the Tooltip component appear above surrounding elements */
-    position: relative;
-    z-index: 100;
-
     width: 100%;
     min-width: 80px;
     max-width: 80px;
     height: 100%;
+
+    /* Tooltip */
+    position: relative;
+    z-index: 1000;
 }
 
 .container {
